added more inputs

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,14 @@ body {
 
 }
 
+.paragraph{
+    display: flex;
+}
+
+.inputNum {
+    width: 60px;
+}
+
 .settings {
     background-color: #eee;
     width:40vw;
